--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "eth-identity",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "eth-crypto": "^2.6.0",
     "ethers": "5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "sqlite3": "^5.1.7",
     "terminal-kit": "^3.0.1"
   }
